--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <h2>{{ main.user.username }}'s Entries 
+    <h2>{{ main.user.name }}'s Entries 
 
     <p>Daily goal: {{ main.user.goal }} words
     <span class="input-btn">
@@ -22,7 +22,7 @@
 
     <div class="list-group" ng-repeat="entry in main.entries | orderBy:'id':true">
       <a class="list-group-item" ng-href="#/entries/{{ entry.id }}">
-      <h4 class="list-group-item-heading">{{ entry.date | date:"MMM d, y" }}</h4>
+      <h4 class="list-group-item-heading">{{ entry.created_at | date:"MMM d, y" }}</h4>
       <div class="progress">
         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{entry.word_count/entry.goal*100}}%">
         <span>{{ entry.word_count }}/{{ entry.goal }}</span> words
