user can register

--- a/wrn-angular/app/views/login.html
+++ b/wrn-angular/app/views/login.html
@@ -1,11 +1,11 @@
 <form nonvalidate ng-submit="session.login()">
   <p>
     <label>Email</label>
-    <input type="email" ng-model="session.email" class='form-control'>
+    <input type="email" ng-model="session.info.email" class='form-control'>
   </p>
   <p>
     <label>Password</label>
-    <input type="password" ng-model="session.password" class='form-control'>
+    <input type="password" ng-model="session.info.password" class='form-control'>
   </p>
   <p>
     <input type="submit" value="Login" class='btn btn-primary'>
