--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -24,18 +24,34 @@
   </div>
 </div>
 
+<div class="list-group" ng-repeat="day in main.days | orderBy:'date':true">
 
-<div class="list-group" ng-repeat="entry in main.entries | orderBy:'id':true">
-  <a class="list-group-item" ng-href="#/entries/{{ entry.id }}">
-  <h4 class="list-group-item-heading">{{ entry.created_at | date:"MMM d, y" }}</h4>
-  <div class="progress">
-    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.word_count >= entry.goal ? 100 : entry.word_count/entry.goal*100 }}%">
-    <span>{{ entry.word_count }}/{{ entry.goal }}</span> words
+  <div ng-show="day.entry">
+    <a class="list-group-item" ng-href="#/entries/{{ day.entry.id }}">
+    <h4 class="list-group-item-heading">{{ day.entry.created_at | date:"MMM d, y" }}</h4>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
+      <span>{{ day.entry.word_count }}/{{ day.entry.goal }}</span> words
+      </div>
     </div>
-  </div>
-  <!-- not using handlebars here to display html -->
-  <p class="text-muted" ng-bind-html="entry.content | limitTo: main.previewLimit"></p>
-  </a>
+    <!-- not using handlebars here to display html -->
+    <p class="text-muted">
+      <span ng-bind-html="day.entry.content | limitTo: main.previewLimit"></span>
+      {{day.entry.content.length >= main.previewLimit ? '...' : ''}}
+    </p>
+    </a>
+  </div><!-- ng-show -->
+
+  <div ng-hide="day.entry" class="list-group-item">
+    <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+      <span>0</span> words
+      </div>
+    </div>
+  </div><!-- ng-hide -->
+
+
 </div>
   
 </div>
