--- a/wrn-angular/app/views/stats.html
+++ b/wrn-angular/app/views/stats.html
@@ -1,8 +1,14 @@
 <h2>Today</h2>
-Progress: {{stats.dt.today.progress}}% 
-<canvas id="doughnut" class="chart chart-doughnut" data="stats.dt.today.data"
-  labels="stats.dt.today.labels"></canvas> 
 
+<div class='donut-outer'>
+  <div class='donut-inner'>
+    <h4>{{stats.dt.today.progress}}%</h4>
+  {{stats.dt.today.data[1]}} words to goal
+  </div>
+</div>
+
+  <canvas  id="doughnut" class="chart chart-doughnut" data="stats.dt.today.data"
+    labels="stats.dt.today.labels"></canvas> 
 
 <h2>Overview</h2>
 
@@ -16,6 +22,5 @@ total words written: {{stats.dt.words.totalWords}} words
 <br />
 daily avearge: {{stats.dt.words.dailyAvg}} words
 <canvas id="line" class="chart chart-line" data="stats.dt.words.data"
-  labels="stats.dt.words.labels" legend="true" series="series"
-  click="onClick">
+  labels="stats.dt.words.labels">
 </canvas> 
