--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -26,7 +26,7 @@
 
 <div class="list-group" ng-repeat="day in main.days | orderBy:'date':true">
 
-  <div ng-show="(day.entry && day.entry.word_count) || $index == 0">
+  <div ng-show="day.entry">
     <a class="list-group-item" ng-href="#/entries/{{ day.entry.id }}">
     <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <span ng-show="day.entry.locked">locked</span></h4>
     <div class="progress">
@@ -41,12 +41,10 @@
     </a>
   </div><!-- ng-show -->
 
-  <div ng-hide="(day.entry && day.entry.word_count) || $index == 0" class="list-group-item">
-    <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
-    <div class="progress">
-      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-      <span>0</span> words
-      </div>
+  <div ng-hide="day.entry">
+    <div  class="list-group-item">
+      <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
+      You didn't do shit
     </div>
   </div><!-- ng-hide -->
 
