--- a/wrn-angular/app/views/entry.html
+++ b/wrn-angular/app/views/entry.html
@@ -15,10 +15,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="successModalLabel">Congratulations!</h4>
+        <h4 class="modal-title" id="successModalLabel">Awesome!</h4>
       </div>
       <div class="modal-body">
-        <p>You've reached today's goal</p>
+        <p>You've reached today's goal!</p>
       </div>
     </div>
   </div>
@@ -26,9 +26,15 @@
 
 <nav class="navbar navbar-fixed-bottom">
   <div class="container-fluid">
-    <p class="navbar-text"><span ng-bind="entry.progress"></span>%</p> 
+    <div class="progress navbar-text"  style="width: 5em">
+      <div class="progress-bar ng-class: entry.progress >= 100 ? 'progress-bar-success' : 'progress-bar-info'" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.progress > 100 ? 100 : entry.progress }}%"><span>{{ entry.progress }}%</span> 
+      </div>
+    </div>
+   
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="" ng-click="entry.toggleFullscreen()">Full</a></li>
+      <li><a href="" ng-click="entry.toggleFullscreen()">
+      <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+      </a></li>
     </ul>
   </div><!-- container-fluid -->
 </nav>
