--- a/wrn-angular/app/views/stats.html
+++ b/wrn-angular/app/views/stats.html
@@ -1,18 +1,41 @@
-<h2>Today</h2>
-
-<div class='donut-outer'>
-  <div class='donut-inner'>
-    <h4>{{stats.dt.today.progress}}%</h4>
-  {{stats.dt.today.data[1]}} words to goal
+<div class="container-fluid">
+  <div class="row">
+    <div class="page-header">
+      <h1>Today <small>{{stats.dt.today.date}}</small></h1>
+    </div>
+      <div class="col-md-6 col-xs-6">
+        <ul class="list-group">
+          <li class="list-group-item"><h2>{{stats.dt.today.progress}}% <small>completed</small></h2></li>
+          <li class="list-group-item"><h2>{{stats.dt.today.data[0]}} <small>words written</small></h2></li>
+          <li class="list-group-item"><h2>{{stats.dt.today.data[1]}} <small>words to goal</small></h2></li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-xs-6">
+        <canvas id="doughnut" class="chart chart-doughnut" 
+          data="stats.dt.today.data"
+          labels="stats.dt.today.labels">
+        </canvas>
+      </div>
+  </div>
+  <div class="row">
+    <div class="page-header">
+      <h1>Overview <small>of the last {{stats.dt.completion.totalDays}} days</small></h1>
+    </div>
+    <div class="col-md-6 col-xs-6">
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <tr>
+            <td><small>Longest Streak</small></td>
+            <td>{{stats.dt.completion.streak}} days</td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
+  
 
-  <canvas  id="doughnut" class="chart chart-doughnut" data="stats.dt.today.data"
-    labels="stats.dt.today.labels"></canvas> 
 
-<h2>Overview</h2>
-
-Longest Streak: {{stats.dt.completion.streak}} days
 <br />
 <canvas id="pie" class="chart chart-pie" data="stats.dt.completion.data"
   labels="stats.dt.completion.labels"></canvas> 
@@ -23,4 +46,4 @@ total words written: {{stats.dt.words.totalWords}} words
 daily avearge: {{stats.dt.words.dailyAvg}} words
 <canvas id="line" class="chart chart-line" data="stats.dt.words.data"
   labels="stats.dt.words.labels">
-</canvas> 
+</canvas>
