--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container">
 
 <!-- TODO: Update User Goal -->
 <div ng-controller="UserCtrl as user">
-  <h2>{{ $root.currentUser.name }}'s Entries </h2>
-
-  <p>Daily goal: {{ $root.currentUser.goal }} words
+  <div class="page-header"><h1>{{ $root.currentUser.name }}'s Entries</h1></div>
+  
+<!--   <p>Daily goal: {{ $root.currentUser.goal }} words
   <span class="input-btn">
     <button class="btn" aria-pressed="false" autocomplete="off" aria-label="Edit"
     data-toggle="collapse" data-target="#goalInput" aria-expanded="false" aria-controls="goalInput">Change Goal</button>
@@ -21,50 +21,61 @@
               ng-change="user.updateGoal()">
       </form>
     </div>
-  </div>
-</div>
+  </div> -->
 
-<div class="list-group" ng-repeat="day in main.days | orderBy:'date':true">
 
+<div class="main" ng-repeat="day in main.days | orderBy:'date':true">
+
+<div class="col-sm-6 col-md-4">
   <div ng-show="day.entry">
-    <div ng-show="day.entry.locked"  class="list-group-item disabled">
-      <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} 
-        <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
-        </h4>
+
+    <div ng-show="day.entry.locked">
+      
         <div class="progress">
           <div class="progress-bar 
-          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-info'" 
+          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-danger'" 
           role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
           style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
+          <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} 
+        <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+        </h4>
           <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
-          </div>
-        </div>
-        <p class="text-muted">
+          <p class="text-muted">
           {{day.entry.preview}}
         </p>
+          </div>
+        </div>
+        
     </div>
-    <a ng-hide="day.entry.locked" class="list-group-item" ng-href="#/entries/{{ day.entry.id }}">
-      <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
-      <div class="progress">
+
+    <a ng-hide="day.entry.locked" ng-href="#/entries/{{ day.entry.id }}">
+      
+      <div class="progress">      
         <div class="progress-bar 
-        ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-info'" 
+                  ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 
+                  $index == 0 ? 'progress-bar-info' : 'progress-bar-danger'" 
         role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
         style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
+        <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
         <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
-        </div>
-      </div>
-      <p class="text-muted">
+              <p class="text-muted">
         {{day.entry.preview}}
       </p>
+        </div>
+      </div>
+
     </a>
     
   </div><!-- ng-show -->
 
   <div ng-hide="day.entry">
-    <div  class="list-group-item">
-      <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
-      You skipped :(
+    <div class="progress">
+      <div class="progress-bar progress-bar-danger" 
+          role="progressbar" style="width: 100%">
+          <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <small>You skipped :(</small></h4>
+      </div>
     </div>
+   
   </div><!-- ng-hide -->
 
 
