--- a/wrn-angular/app/views/entry.html
+++ b/wrn-angular/app/views/entry.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-fixed-bottom">
+<footer class="navbar navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="progress navbar-text"  style="width: 5em">
       <div class="progress-bar ng-class: entry.progress >= 100 ? 'progress-bar-success' : 'progress-bar-info'" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.progress > 100 ? 100 : entry.progress }}%"><span>{{ entry.progress }}%</span> 
@@ -35,6 +35,7 @@
       <li><a href="" ng-click="entry.toggleFullscreen()">
       <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
       </a></li>
+
     </ul>
   </div><!-- container-fluid -->
-</nav>
+</footer>
